--- a/src/app/components/section2/section2.component.html
+++ b/src/app/components/section2/section2.component.html
@@ -4,5 +4,7 @@
   <li class="list"> CURSOS PRESENCIALES</li>
   <li class="list"> CONGRESOS</li>
   <li class="list"> REVISTA VIRTUAL</li>
+  <li class="list"> SER SOCIO</li>
+  <li class="list"> BECAS</li>
 </ul>
 </div>
