--- a/src/app/components/section3/section3.component.html
+++ b/src/app/components/section3/section3.component.html
@@ -1,29 +1,30 @@
+
 <div class="container-cards">
-  <div class="card" style="width: 18rem;">
-    <img  src="../../../assets/images/infopacientes_examen_pediatria_enema_2.jpg" class="card-img-top" alt="card">
-    <div class="card-body">
-      <h5 class="card-title">Radiologia contrastada</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+<div class="card" id="card">
+  <div class="card-header">
   </div>
-
-  <div class="card" style="width: 18rem;">
-    <img  src="../../../assets/images/2mammograms.jpg" class="card-img-top" alt="card">
-    <div class="card-body">
-      <h5 class="card-title">Radiologia Mamaria</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+  <div class="card-body">
+    <h5 class="card-title">Tomografía Multislice</h5>
+    <p class="card-text">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración 7 meses.  Teórico presencial - Práctico.</p>
+    <a href="#" class="btn btn-primary">Ir al curso</a>
   </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="../.././../assets/images/Screen-Shot-2020-04-01-at-12.46.19.png" class="card-img-top" alt="card">
-    <div class="card-body">
-      <h5 class="card-title">Tomografia multislice</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+</div>
+<div class="card" id="card">
+  <div class="card-header">
   </div>
-
+  <div class="card-body">
+    <h5 class="card-title">Imagenología Mamaria</h5>
+    <p class="card-text">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración 5 meses.  Teórico presencial - Práctico.</p>
+    <a href="#" class="btn btn-primary">Ir al curso</a>
+  </div>
+</div>
+<div class="card" id="card">
+  <div class="card-header">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Radiología Pediátrica</h5>
+    <p class="card-text">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración 3 meses.  Teórico presencial - Práctico.</p>
+    <a href="#" class="btn btn-primary">Ir al curso</a>
+  </div>
+</div>
 </div>
