--- a/src/app/components/section2/section2.component.css
+++ b/src/app/components/section2/section2.component.css
@@ -1,6 +1,7 @@
 
 .menu-list{background-color: #002653;
-width: 250px;}
+width: 250px;
+height: 500px;}
 .list {list-style: none;
 color: #fff;
 font-size: 1.3em;
