--- a/src/app/components/section3/section3.component.css
+++ b/src/app/components/section3/section3.component.css
@@ -1,15 +1,12 @@
 .container-cards
 {
 display: flex;
-border: 2px solid black;
+/*border: 2px solid black;*/
 margin: 10px auto;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 
 }
 
-.card {margin: auto;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-#card1 {width: 100%;}
-
+#card {margin:10px 0px ;}
