--- a/src/app/components/section1/section1.component.css
+++ b/src/app/components/section1/section1.component.css
@@ -1,4 +1,4 @@
-.nav ul{display: flex;
+/*.nav ul{display: flex;
 width: 100%;
 align-items: center;
 justify-content: center;}
@@ -7,3 +7,6 @@ list-style: none;
 padding: 10px;
 font-size: 1.2em;
 }
+*/
+
+
