--- a/src/app/components/section1/section1.component.html
+++ b/src/app/components/section1/section1.component.html
@@ -1,8 +1,29 @@
 
-<div class="nav">
+<!--<div class="nav">
   <ul class="ul">
     <li class="li">SOCIOS</li>
     <li>FORMACION</li>
     <li>CONTACTO</li>
   </ul>
-</div>
+</div>-->
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid" >
+    <a class="navbar-brand" href="#">
+      <ul class="navbar-nav">
+        <li>
+          <img src="../../../assets/images/logo.png" alt="Logo" width="30"  class="d-inline-block align-text-top">
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" href="#">SOCIOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">FORMACIÓN</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">CONTACTO</a>
+        </li>
+      </ul>
+    </a>
+  </div>
+</nav>
