--- a/src/app/components/section3/section3.component.html
+++ b/src/app/components/section3/section3.component.html
@@ -3,28 +3,28 @@
 <div class="card" id="card">
   <div class="card-header">
   </div>
-  <div class="card-body">
+  <div class="card-body text-center">
     <h5 class="card-title">Tomografía Multislice</h5>
     <p class="card-text">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración 7 meses.  Teórico presencial - Práctico.</p>
-    <a href="#" class="btn btn-primary">Ir al curso</a>
+    <a href="#" class="btn btn-warning">Ir al curso</a>
   </div>
 </div>
 <div class="card" id="card">
   <div class="card-header">
   </div>
-  <div class="card-body">
+  <div class="card-body text-center">
     <h5 class="card-title">Imagenología Mamaria</h5>
     <p class="card-text">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración 5 meses.  Teórico presencial - Práctico.</p>
-    <a href="#" class="btn btn-primary">Ir al curso</a>
+    <a href="#" class="btn btn-warning">Ir al curso</a>
   </div>
 </div>
 <div class="card" id="card">
   <div class="card-header">
   </div>
-  <div class="card-body">
+  <div class="card-body text-center">
     <h5 class="card-title">Radiología Pediátrica</h5>
     <p class="card-text">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración 3 meses.  Teórico presencial - Práctico.</p>
-    <a href="#" class="btn btn-primary">Ir al curso</a>
+    <a href="#" class="btn btn-warning">Ir al curso</a>
   </div>
 </div>
 </div>
