--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-section-slider class="grid-slider"></app-section-slider>
 <app-section2 class="grid-menu"></app-section2>
 <app-section3 class="grid-contenido"></app-section3>
+<app-section-alumnos class="grid-alumno"></app-section-alumnos>
 </div>
