cambios de entrega

--- a/src/app/components/section-alumnos/section-alumnos.component.css
+++ b/src/app/components/section-alumnos/section-alumnos.component.css
@@ -14,3 +14,6 @@ font-size: 1.6em;}
 font-size: 0.5em;
 list-style: none;
 }
+#placeholder-alumno span { color: #ffc107;
+font-size: 0.6em;
+padding: 5px;}
