--- a/src/app/components/section-alumnos/section-alumnos.component.html
+++ b/src/app/components/section-alumnos/section-alumnos.component.html
@@ -7,7 +7,7 @@
   <div class="collapse" id="collapseExample1">
     <div class="card card-body fs-1" id="placeholder-alumno">
       <ul *ngFor=" let Alumno of listaAlumnos">
-        <li> {{Alumno.nombre}}</li>
+        <li> {{Alumno.nombre +" "+ Alumno.apellido}}</li>
       </ul>
     </div>
   </div>
@@ -19,7 +19,7 @@
   <div class="collapse" id="collapseExample2">
     <div class="card card-body fs-1" id="placeholder-alumno">
       <ul *ngFor=" let Alumno of listaAlumnos">
-        <li *ngIf="Alumno.socio === true"> {{Alumno.nombre}}</li>
+        <li *ngIf="Alumno.socio === true"> {{Alumno.nombre +" "+ Alumno.apellido}} <span>SOCIO</span></li>
       </ul>
     </div>
   </div>
