--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-section2 class="grid-menu"></app-section2>
 <app-section3 class="grid-contenido"></app-section3>
 <app-section-alumnos class="grid-alumno"></app-section-alumnos>
+<app-form-socios class="grid-form"></app-form-socios>
 </div>
