--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,8 @@
 grid-template-areas: "header header header header"
                       "slider slider slider slider"
                       "menu contenido contenido contenido"
-                      "alumno alumno alumno alumno";}
+                      "alumno alumno alumno alumno"
+                      "form form form form";}
 
 .grid-header{ grid-area: header;
 color: #fff;
@@ -19,3 +20,6 @@ font-family:  'Assistant', sans-serif;}
 .grid-slider{grid-area: slider;}
 
 .grid-alumno {grid-area: alumno;}
+
+.grid-form {grid-area: form;
+  font-family:  'Assistant', sans-serif;}
