--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,6 @@
 <app-section3 class="grid-contenido"></app-section3>
 <app-section-alumnos class="grid-alumno"></app-section-alumnos>
 <app-form-socios class="grid-form"></app-form-socios>
+<app-section-cursos class="grid-cursos" ></app-section-cursos>
+<app-section-noticias class="grid-noticias"></app-section-noticias>
 </div>
