--- a/src/app/components/section3/section3.component.html
+++ b/src/app/components/section3/section3.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div class="container-cards">
 <div class="card" id="card">
   <div class="card-header">
@@ -28,3 +28,20 @@
   </div>
 </div>
 </div>
+
+
+<div class="card">
+  <div class="card-body tarjeta" *ngFor="let curso of cursos">
+    <mat-card class="color-card">
+        <mat-card-header class="align">
+          <mat-card-title>{{curso.titulo}}</mat-card-title>
+        </mat-card-header>
+      <mat-card-content class="align">Dirigido a licenciados en bio imágenes y técnicos radiologos. Duración {{curso.duracion}}. Modalidad {{curso.modalidad}}</mat-card-content>
+      <mat-card-actions class="align">
+        <button mat-flat-button> IR AL CURSO</button>
+      </mat-card-actions>
+    </mat-card>
+    </div>
+  </div>-->
+
+<app-section-cursos></app-section-cursos>
