--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
 <app-form-socios class="grid-form"></app-form-socios>
 <app-section-cursos class="grid-cursos" ></app-section-cursos>
 <app-section-noticias class="grid-noticias"></app-section-noticias>
+<app-footer class="grid-footer"></app-footer>
 </div>
