--- a/src/app/components/section2/section2.component.html
+++ b/src/app/components/section2/section2.component.html
@@ -1,10 +1,20 @@
-<div class="menu-list">
-<ul>
-  <li class="list"> CURSOS ONLINE</li>
-  <li class="list"> CURSOS PRESENCIALES</li>
-  <li class="list"> CONGRESOS</li>
-  <li class="list"> REVISTA VIRTUAL</li>
-  <li class="list"> SER SOCIOS </li>
-  <li class="list"> BECAS</li>
-</ul>
-</div>
+
+
+<mat-toolbar>
+  <span>CURSOS ONLINE</span>
+</mat-toolbar>
+<mat-toolbar>
+  <span>CURSOS PRESENCIALES</span>
+</mat-toolbar>
+<mat-toolbar>
+  <span>CONGRESOS</span>
+</mat-toolbar>
+<mat-toolbar>
+  <span>REVISTA VIRTUAL</span>
+</mat-toolbar>
+<mat-toolbar>
+  <span>SER SOCIOS</span>
+</mat-toolbar>
+<mat-toolbar>
+  <span>BECAS</span>
+</mat-toolbar>
