--- a/src/app/components/section-alumnos/section-alumnos.component.css
+++ b/src/app/components/section-alumnos/section-alumnos.component.css
@@ -1,7 +1,8 @@
 .section-alumnos
 {background-color: #002653;
 color: #fff;
-text-align: center;}
+text-align: center;
+margin-top: 100px;}
 
 .section-alumnos button
  { background-color: transparent;
