--- a/src/app/components/section1/section1.component.html
+++ b/src/app/components/section1/section1.component.html
@@ -4,9 +4,6 @@
   <div class="container-fluid" >
     <a class="navbar-brand" href="#">
       <ul class="navbar-nav">
-        <li>
-          <img src="../../../assets/images/logo.png" alt="Logo" width="30"  class="d-inline-block align-text-top">
-        </li>
         <li class="nav-item">
           <a class="nav-link active text-white" aria-current="page" href="#">SOCIOS</a>
         </li>
@@ -15,6 +12,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">CONTACTO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">PUBLICACIONES</a>
         </li>
       </ul>
     </a>
