--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,7 @@
 <app-section-noticias class="grid-noticias"></app-section-noticias>
 <app-footer class="grid-footer"></app-footer>
 </div>
+
+<button mat-raised-button (click)="agregarCurso()">Agregar curso</button>
+
+
