--- a/src/app/components/section1/section1.component.css
+++ b/src/app/components/section1/section1.component.css
@@ -1,7 +1,9 @@
 .container-fluid{display: flex;
-justify-content: center;}
+justify-content: center;
+}
 
 
 .container-fluid a
  {font-size: 1.1em;}
 
+ .navbar {background-color: #002653;}
