--- a/src/app/components/section1/section1.component.html
+++ b/src/app/components/section1/section1.component.html
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg ">
   <div class="container-fluid" >
     <a class="navbar-brand" href="#">
       <ul class="navbar-nav">
