--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,9 @@
 <app-section-cursos class="grid-cursos" ></app-section-cursos>
 <app-section-noticias class="grid-noticias"></app-section-noticias>
 <app-footer class="grid-footer"></app-footer>
+<button class="grid-boton" mat-raised-button (click)="agregarCurso()">AGREGAR CURSO</button>
 </div>
 
-<button mat-raised-button (click)="agregarCurso()">Agregar curso</button>
+
 
 
