--- a/src/app/components/form-socios/form-socios.component.css
+++ b/src/app/components/form-socios/form-socios.component.css
@@ -24,3 +24,7 @@ color: #002653;}
 font-size: 0.7em;}
 .span-error{color: red;}
 
+.mat-mdc-raised-button
+ {background-color: orange !important}
+
+
