--- a/src/app/components/form-socios/form-socios.component.html
+++ b/src/app/components/form-socios/form-socios.component.html
@@ -69,7 +69,8 @@
   </div>
   <div class="span-error">{{spanError}}</div>
   <div class="col-12 boton">
-    <button type="submit" class="btn btn-warning" >ASOCIARME</button>
+
+    <button mat-raised-button>ASOCIARME</button>
   </div>
 </form>
 </div>
