--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,7 @@ grid-template-areas: "header header header header"
                       "form form form form"
                       "alumno alumno alumno alumno"
                       "curso curso curso curso"
+                      "boton boton boton boton"
                       "footer footer footer footer";}
 
 .grid-header{ grid-area: header;
@@ -36,3 +37,12 @@ color: #002653;}
 
 .grid-footer
 {grid-area: footer;}
+
+.grid-boton{grid-area: boton;
+width: 10%;
+margin: auto;}
+
+.mat-mdc-raised-button
+ {background-color: orange !important}
+
+
