--- a/src/app/components/section3/section3.component.html
+++ b/src/app/components/section3/section3.component.html
@@ -1,6 +1,6 @@
 
 <div class="card">
-  <div class="card-body tarjeta" *ngFor="let curso of cursos">
+  <div class="card-body tarjeta" *ngFor="let curso of cursos$ | async">
     <mat-card class="color-card">
         <mat-card-header class="align">
           <mat-card-title>{{curso.titulo}}</mat-card-title>
