--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <div class="grid-container">
-<app-section1 class="grid-header"></app-section1>
+<app-navbar class="grid-header"></app-navbar>
 <app-section-slider class="grid-slider"></app-section-slider>
-<app-section2 class="grid-menu"></app-section2>
-<app-section3 class="grid-contenido"></app-section3>
+<app-sidebar class="grid-menu"></app-sidebar>
+<app-cards class="grid-contenido"></app-cards>
 <app-section-alumnos class="grid-alumno"></app-section-alumnos>
 <app-form-socios class="grid-form"></app-form-socios>
 <app-section-cursos class="grid-cursos" ></app-section-cursos>
 <app-section-noticias class="grid-noticias"></app-section-noticias>
 <app-footer class="grid-footer"></app-footer>
+<app-form-nuevo-curso class="grid-form-curso"></app-form-nuevo-curso>
 <button class="grid-boton" mat-raised-button (click)="agregarCurso()">AGREGAR CURSO</button>
 </div>
 
