cambios antes de q se muera la compu

--- a/src/app/components/form-socios/form-socios.component.html
+++ b/src/app/components/form-socios/form-socios.component.html
@@ -69,7 +69,7 @@
   </div>
   <div class="span-error">{{spanError}}</div>
   <div class="col-12 boton">
-    <button mat-raised-button>ASOCIARME</button>
+    <button mat-raised-button (click)="asociarse()">ASOCIARME</button>
   </div>
 </form>
 </div>
