--- a/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.html
+++ b/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.html
@@ -43,7 +43,7 @@
 </div>
 <div class="col-md-3">
   <label  for="inputClases" class="form-label">Cantidad de clases semanales</label>
-  <input formControlName="clases" type="number" class="form-control" id="inputClases">
+  <input formControlName="clasesSemanales" type="number" class="form-control" id="inputClases">
   <div *ngIf="formCursoNuevo.controls['clases'].errors?.['required']"></div>
 </div>
 <div class="col-md-3">
