--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,50 +1,13 @@
 
-.grid-container {display: grid;
-grid-template-areas: "header header header header"
-                      "slider slider slider slider"
-                      "menu contenido contenido contenido"
-                      "noticias noticias noticias noticias"
-                      "form form form form"
-                      "alumno alumno alumno alumno"
-                      "curso curso curso curso"
-                      "boton boton boton boton"
-                      "form-curso form-curso form-curso form-curso"
-                      "footer footer footer footer";}
 
-.grid-header{ grid-area: header;
-color: #fff;
-background-color: #002653;
-font-family:  'Assistant', sans-serif;}
+.mat-toolbar{background-color: #002653;}
 
-.grid-menu{grid-area: menu;
-  font-family:  'Assistant', sans-serif;}
-
-.grid-contenido{ grid-area: contenido;
-  font-family:  'Assistant', sans-serif;}
-
-.grid-slider{grid-area: slider;}
-
-.grid-alumno {grid-area: alumno;}
-
-.grid-form {grid-area: form;
-  font-family:  'Assistant', sans-serif;}
-
-.grid-cursos {grid-area:curso;
-width: 100%;
-color: #002653;}
-
-.grid-noticias{ grid-area: noticias;
+.example-spacer {
+  flex: 1 1 auto;
 }
 
-.grid-footer
-{grid-area: footer;}
+.logo {width: 20px;
+}
 
-.grid-boton{grid-area: boton;
-width: 10%;
-margin: auto;}
-
-.mat-mdc-raised-button
- {background-color: orange !important}
-
-
- .grid-form-curso{grid-area: form-curso;}
+.example-icon {border: none;
+  background-color: transparent;}
