--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,19 @@
-<div class="grid-container">
-<app-navbar class="grid-header"></app-navbar>
-<app-section-slider class="grid-slider"></app-section-slider>
-<app-sidebar class="grid-menu"></app-sidebar>
-<app-cards class="grid-contenido"></app-cards>
-<app-section-alumnos class="grid-alumno"></app-section-alumnos>
-<app-form-socios class="grid-form"></app-form-socios>
-<app-section-cursos class="grid-cursos" ></app-section-cursos>
-<app-section-noticias class="grid-noticias"></app-section-noticias>
-<app-footer class="grid-footer"></app-footer>
-<app-form-nuevo-curso class="grid-form-curso"></app-form-nuevo-curso>
-<button class="grid-boton" mat-raised-button (click)="agregarCurso()">AGREGAR CURSO</button>
-</div>
+<mat-toolbar class="toolbar">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span class="example-spacer"></span>
+  <a mat-button routerLink="inicio">INICIO</a>
+  <a mat-button routerLink="noticias">NOTICIAS</a>
+  <a mat-button routerLink="formulario-socios">SER SOCIO</a>
+  <a mat-button routerLink="cards">CURSOS</a>
+  <a mat-button routerLink="formacion/enseña-con-nosotros">FORMACION</a>
+  <a mat-button routerLink="formacion/tabla-de-cursos">FORMACION</a>
+  <a mat-button routerLink="footer">CONTACTO</a>
+  <span class="example-spacer"></span>
+  <button matbutton class="example-icon" (click)="irInicio()" aria-label="Example icon-button with share icon"><img class="logo" src="../assets/images/logo.png" alt="inicio" title="inicio"> </button>
+</mat-toolbar>
+<router-outlet></router-outlet>
 
 
 
