--- a/src/app/cursos/components/section-cursos/section-cursos.component.html
+++ b/src/app/cursos/components/section-cursos/section-cursos.component.html
@@ -38,7 +38,10 @@
   <ng-container matColumnDef="acciones">
     <th mat-header-cell *matHeaderCellDef>Acciones</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button>
+      <button mat-icon-button (click)="goEdit(element)" >
+        <mat-icon> edit </mat-icon>
+      </button>
+      <button mat-icon-button (click)="deleteCurso(element)">
         <mat-icon> delete </mat-icon>
       </button>
     </td>
