--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <a mat-button routerLink="formulario-socios">SER SOCIO</a>
   <a mat-button routerLink="cards">CURSOS</a>
   <a mat-button routerLink="formacion/enseña-con-nosotros">FORMACION</a>
-  <a mat-button routerLink="formacion/tabla-de-cursos">FORMACION</a>
+  <a mat-button routerLink="formacion/tabla-de-cursos">ORGANIZACION</a>
   <a mat-button routerLink="footer">CONTACTO</a>
   <span class="example-spacer"></span>
   <button matbutton class="example-icon" (click)="irInicio()" aria-label="Example icon-button with share icon"><img class="logo" src="../assets/images/logo.png" alt="inicio" title="inicio"> </button>
