--- a/src/app/cursos/components/editar-curso/editar-curso.component.css
+++ b/src/app/cursos/components/editar-curso/editar-curso.component.css
@@ -1,7 +1,8 @@
 .container-form{width: 70%;
 margin:50px  auto;
-border: 1px solid grey;
-padding: 40px 30px 10px 30px;
+border-top: 1px solid grey;
+border-bottom: 1px solid grey;
+padding: 80px 30px 40px 30px;
 color: #002653;}
 
 .mat-mdc-raised-button
@@ -12,3 +13,9 @@ color: #002653;}
 {margin: 20px auto;
 text-align: center;
 align-items: center;}
+
+
+
+.example-margin {
+  margin: 10px;
+}
