--- a/src/app/cursos/components/editar-curso/editar-curso.component.html
+++ b/src/app/cursos/components/editar-curso/editar-curso.component.html
@@ -4,42 +4,48 @@
       <div class="col-md-3">
         <label  for="inputId" class="form-label">ID</label>
         <input formControlName="id" type="number" class="form-control" id="inputId">
-        <div *ngIf="formulario.controls['titulo'].errors?.['required']"></div>
+
       </div>
       <div class="col-md-3">
       <label  for="inputCurso" class="form-label">Curso</label>
       <input formControlName="titulo" type="text" class="form-control" id="inputCurso">
-      <div *ngIf="formulario.controls['titulo'].errors?.['required']"></div>
+
     </div>
     <div class="col-md-3">
       <label  for="inputModalidad" class="form-label">Modalidad</label>
       <input formControlName="modalidad" type="text" class="form-control" id="inputModalidad">
-      <div *ngIf="formulario.controls['modalidad'].errors?.['required']"></div>
+
     </div>
     <div class="col-md-3">
       <label  for="inputDuracion" class="form-label">Duración</label>
       <input formControlName="duracion" type="text" class="form-control" id="inputDuracion">
-      <div *ngIf="formulario.controls['duracion'].errors?.['required']"></div>
+
+    </div>
+    <div class="col-md-3">
+      <mat-card-content>Cupo abierto</mat-card-content>
+      <mat-slide-toggle formControlName="cupo" class="example-margin"></mat-slide-toggle>
     </div>
     <div class="col-md-3">
       <label  for="inputCupo" class="form-label">Cupo</label>
       <input formControlName="cupo" type="text" class="form-control" id="inputCupo">
-      <div *ngIf="formulario.controls['cupo'].errors?.['required']"></div>
+
     </div>
     <div class="col-md-3">
       <label  for="inputProfesor" class="form-label">Profesor</label>
       <input formControlName="profesor" type="text" class="form-control" id="inputProfesor">
-      <div *ngIf="formulario.controls['profesor'].errors?.['required']"></div>
+
     </div>
     <div class="col-md-3">
       <label  for="inputClases" class="form-label"> Clases semanales</label>
       <input formControlName="clasesSemanales" type="number" class="form-control" id="inputClases">
-      <div *ngIf="formulario.controls['clases'].errors?.['required']"></div>
+
     </div>
     <div class="col-md-3">
       <label  for="inputInicio" class="form-label">Fecha de inicio</label>
-      <input formControlName="fechaInicio" type="date" class="form-control" id="inputInicio">
-      <div *ngIf="formulario.controls['inicio'].errors?.['required']"></div>
+      <input matInput [matDatepicker]="fechaInicio" formControlName="fechaInicio" type="date" class="form-control" id="inputInicio">
+      <mat-datepicker-toggle matSuffix [for]="fechaInicio"></mat-datepicker-toggle>
+      <mat-datepicker #fechaInicio></mat-datepicker>
+
     </div>
 <div class="col-md-6 boton">
   <button mat-raised-button type="submit">EDITAR</button>
