--- a/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.css
+++ b/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.css
@@ -1,7 +1,7 @@
 .container-form {width: 80%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 200px;
+  margin-top: 100px;
   color: #002653;}
 
   .container-form h2{text-align: center;
@@ -54,3 +54,10 @@ border-left: 1px solid grey;}
 {width: 100%;
   object-fit: cover;
 }
+.example-margin {
+  margin: 10px;
+}
+
+
+
+
