--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <a mat-button routerLink="inicio">INICIO</a>
   <a mat-button routerLink="noticias">NOTICIAS</a>
   <a mat-button routerLink="formulario-socios">SER SOCIO</a>
-  <a mat-button routerLink="cards">CURSOS</a>
+  <a mat-button routerLink="formacion/cards">CURSOS</a>
   <a mat-button routerLink="formacion/enseña-con-nosotros">FORMACION</a>
   <a mat-button routerLink="formacion/tabla-de-cursos">ORGANIZACION</a>
   <a mat-button routerLink="footer">CONTACTO</a>
