--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -9,5 +9,6 @@
   <app-section-noticias class="grid-noticias"></app-section-noticias>
   <app-footer class="grid-footer"></app-footer>
   <!--<app-form-nuevo-curso class="grid-form-curso"></app-form-nuevo-curso>-->
-  <button class="grid-boton" mat-raised-button (click)="agregarCurso()">AGREGAR CURSO</button>
+  <!--<button class="grid-boton" mat-raised-button (click)="agregarCurso()">AGREGAR CURSO</button>-->
 </div>
+
