--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar navbar-expand-lg ">
+<!--<nav class="navbar navbar-expand-lg ">
   <div class="container-fluid" >
     <a class="navbar-brand" href="#">
       <ul class="navbar-nav">
@@ -19,4 +19,4 @@
       </ul>
     </a>
   </div>
-</nav>
+</nav>-->
