--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,14 +1,15 @@
 <div class="grid-container">
   <!--<app-navbar class="grid-header"></app-navbar>-->
-  <app-section-slider class="grid-slider"></app-section-slider>
-  <app-sidebar class="grid-menu"></app-sidebar>
+ <app-section-slider class="grid-slider"></app-section-slider>
+ <app-sidebar class="grid-menu"></app-sidebar>
+ <app-info-becas class="grid-becas"></app-info-becas>
   <!--<app-cards class="grid-card"></app-cards>-->
-  <app-section-alumnos class="grid-alumno"></app-section-alumnos>
+   <app-section-alumnos class="grid-alumno"></app-section-alumnos>
   <app-form-socios class="grid-form"></app-form-socios>
  <!-- <app-section-cursos class="grid-cursos" ></app-section-cursos>-->
-  <app-section-noticias class="grid-noticias"></app-section-noticias>
+    <app-section-noticias class="grid-noticias"></app-section-noticias>
   <app-footer class="grid-footer"></app-footer>
-  <!--<app-form-nuevo-curso class="grid-form-curso"></app-form-nuevo-curso>-->
+ <!-- <app-form-nuevo-curso class="grid-form-curso"></app-form-nuevo-curso>->
   <!--<button class="grid-boton" mat-raised-button (click)="agregarCurso()">AGREGAR CURSO</button>-->
 </div>
 
