--- a/src/app/cursos/components/editar-curso/editar-curso.component.html
+++ b/src/app/cursos/components/editar-curso/editar-curso.component.html
@@ -1,55 +1,58 @@
+<h1 mat-dialog-title>EDITAR CURSO: {{curso.titulo}} </h1>
+<div mat-dialog-content>
 <div class="container-form">
   <form [formGroup]="formulario" (ngSubmit)="editarCurso()">
     <div class="row">
-      <div class="col-md-3">
-        <label  for="inputId" class="form-label">ID</label>
-        <input formControlName="id" type="number" class="form-control" id="inputId">
 
-      </div>
-      <div class="col-md-3">
+    <div class="col-md-3">
       <label  for="inputCurso" class="form-label">Curso</label>
-      <input formControlName="titulo" type="text" class="form-control" id="inputCurso">
-
+      <input  matInput formControlName="titulo" id="inputCurso" title="label">
     </div>
+
     <div class="col-md-3">
       <label  for="inputModalidad" class="form-label">Modalidad</label>
-      <input formControlName="modalidad" type="text" class="form-control" id="inputModalidad">
-
+      <input matInput formControlName="modalidad"  title="label" id="inputModalidad">
     </div>
+
     <div class="col-md-3">
       <label  for="inputDuracion" class="form-label">Duración</label>
-      <input formControlName="duracion" type="text" class="form-control" id="inputDuracion">
-
+      <input matInput formControlName="duracion"  id="inputDuracion" title="label">
     </div>
+
     <div class="col-md-3">
       <mat-card-content>Cupo abierto</mat-card-content>
       <mat-slide-toggle formControlName="cupo" class="example-margin"></mat-slide-toggle>
     </div>
-    <div class="col-md-3">
-      <label  for="inputCupo" class="form-label">Cupo</label>
-      <input formControlName="cupo" type="text" class="form-control" id="inputCupo">
 
-    </div>
     <div class="col-md-3">
-      <label  for="inputProfesor" class="form-label">Profesor</label>
-      <input formControlName="profesor" type="text" class="form-control" id="inputProfesor">
-
+      <label for="inputCupo" class="form-label">Cupo</label>
+      <input matInput formControlName="cupo" id="inputCupo" title="label">
     </div>
+
+    <div class="col-md-3">
+      <label for="inputProfesor" class="form-label">Profesor</label>
+      <input matInput formControlName="profesor" title="label" id="inputProfesor">
+    </div>
+
     <div class="col-md-3">
       <label  for="inputClases" class="form-label"> Clases semanales</label>
-      <input formControlName="clasesSemanales" type="number" class="form-control" id="inputClases">
-
+      <input matInput formControlName="clasesSemanales" type="number" class="form-control" id="inputClases" title="label">
     </div>
+
     <div class="col-md-3">
       <label  for="inputInicio" class="form-label">Fecha de inicio</label>
-      <input matInput [matDatepicker]="fechaInicio" formControlName="fechaInicio" type="date" class="form-control" id="inputInicio">
+      <input matInput [matDatepicker]="fechaInicio" formControlName="fechaInicio" type="date"  id="inputInicio" title="label">
       <mat-datepicker-toggle matSuffix [for]="fechaInicio"></mat-datepicker-toggle>
       <mat-datepicker #fechaInicio></mat-datepicker>
+    </div>
 
     </div>
-<div class="col-md-6 boton">
-  <button mat-raised-button type="submit">EDITAR</button>
-</div>
-    </div>
   </form>
+
+</div>
+
+
+<div mat-dialog-actions align="end">
+  <button matDialogClose mat-raised-button>Cerrar</button>
+  <button mat-raised-button color="primary" (click)="editarCurso()">Editar</button>
 </div>
