--- a/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.html
+++ b/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.html
@@ -6,7 +6,7 @@
   <div class="info">
     <div class="contenedor text-center d-flex justify-content-between align-items-center">
       <div class="contenedor-img d-flex justify-content-evenly">
-    <img src="../../../assets/images/SNC.png" alt="img">
+    <img src="../../../../assets/images/SNC.png" alt="img">
     </div>
     <div class="container-info">
     <p>En nuestra Sociedad de Radiología te ofrecemos la posibilidad de que vos seas quien forme a nuestros alumnos. Con el compromiso que requiere, en conjunto de nuestro equipo instancia toda la información, herramientas y servicios necesarios para la realización de un curso que capacite, perfeccione y entusiasme a los alumnos que recorren el camino del aprendizaje.<br>
@@ -37,7 +37,9 @@
 </div>
 <div class="col-md-3">
   <label  for="inputProfesor" class="form-label">Nombre del Profesor</label>
-  <input formControlName="profesor" type="text" class="form-control" id="inputProfesor">
+<mat-select formControlName="profesor" class="selec">
+  <mat-option *ngFor="let profesor of profesor$ | async" [value]="profesor" apparence="fill">{{profesor.nombre}}</mat-option>
+</mat-select>
 
 </div>
 <div class="col-md-3">
