--- a/src/app/cursos/components/section-cursos/section-cursos.component.html
+++ b/src/app/cursos/components/section-cursos/section-cursos.component.html
@@ -32,7 +32,7 @@
 
   <ng-container matColumnDef="fechaInicio">
     <th mat-header-cell *matHeaderCellDef>Fecha de Inicio</th>
-    <td mat-cell *matCellDef="let element">{{element.fechaInicio | formatoFechaHora}}</td>
+    <td mat-cell *matCellDef="let element">{{element.fechaInicio }}</td>
   </ng-container>
 
   <ng-container matColumnDef="acciones">
@@ -41,7 +41,7 @@
       <button mat-icon-button (click)="goEdit(element)"  >
         <mat-icon> edit </mat-icon>
       </button>
-      <button mat-icon-button (click)="deleteCurso(element.id)">
+      <button mat-icon-button (click)="deleteCurso(element)">
         <mat-icon> delete </mat-icon>
       </button>
     </td>
