--- a/src/app/components/info-becas/info-becas.component.html
+++ b/src/app/components/info-becas/info-becas.component.html
@@ -6,6 +6,6 @@
     <h2>CONVOCATORIA BECA ESOR 2023</h2>
     <p>El ESOR Visiting Scholarship Programme (Europa) ofrece una magnífica oportunidad para los residentes de radiología de 3º, 4º y 5º año para realizar una rotación de 3 meses en un centro europeo de calidad con un programa de formación tutorizado, eligiendo el propio becario el área de interés.</p>
     <p>Podés consultar las condiciones de la beca en:</p>
-    <a  class="link" target="_blank" href="https://www.esor.org/training-programmes/visiting-scholarship-programmes/visiting-scholarship-programme-europe/" > https://www.esor.org/training-programmes/visiting-scholarship-programmes/visiting-scholarship-programme-europe/</a>
+    <a  class="link" rel="noopener" target="_blank" href="https://www.esor.org/training-programmes/visiting-scholarship-programmes/visiting-scholarship-programme-europe/" > https://www.esor.org/training-programmes/visiting-scholarship-programmes/visiting-scholarship-programme-europe/</a>
   </div>
 </div>
