--- a/src/app/cursos/components/editar-curso/editar-curso.component.html
+++ b/src/app/cursos/components/editar-curso/editar-curso.component.html
@@ -29,10 +29,12 @@
       <input matInput formControlName="cupo" id="inputCupo" title="label">
     </div>
 
-    <div class="col-md-3">
-      <label for="inputProfesor" class="form-label">Profesor</label>
-      <input matInput formControlName="profesor" title="label" id="inputProfesor">
-    </div>
+    <mat-form-field class="col-md-3"  appearance="fill">
+      <label  for="inputProfesor" class="form-label">Nombre del Profesor</label>
+    <mat-select formControlName="profesor" class="selec" >
+      <mat-option *ngFor="let profesor of profesor$ | async" [value]="profesor">{{profesor.nombre}}</mat-option>
+    </mat-select>
+    </mat-form-field>
 
     <div class="col-md-3">
       <label  for="inputClases" class="form-label"> Clases semanales</label>
@@ -46,11 +48,11 @@
       <mat-datepicker #fechaInicio></mat-datepicker>
     </div>
 
-    </div>
+  </div>
   </form>
 
 </div>
-
+</div>
 
 <div mat-dialog-actions align="end">
   <button matDialogClose mat-raised-button>Cerrar</button>
