--- a/src/app/cursos/components/section-cursos/section-cursos.component.html
+++ b/src/app/cursos/components/section-cursos/section-cursos.component.html
@@ -17,7 +17,7 @@
 
   <<ng-container matColumnDef="cupo">
     <th mat-header-cell *matHeaderCellDef >Cupo</th>
-    <td mat-cell *matCellDef="let element" [appDirectivaEstilos]="element.inscripcionAbierta">{{element.cupo | formatoBooleano: 'Abierto' : 'Cerrado'}}</td>
+    <td mat-cell *matCellDef="let element" >{{element.cupo | formatoBooleano: 'Abierto' : 'Cerrado'}}</td>
   </ng-container>
 
   <ng-container matColumnDef="profesor">
