--- a/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.html
+++ b/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.html
@@ -54,7 +54,7 @@
 </div>
 <div class="span-congratulations">{{spanCongratulations}}</div>
 <div class="col-12 boton">
-<button mat-raised-button type="submit">AGREGAR CURSO</button>
+<button id="agregarCurso" at-raised-button type="submit">AGREGAR CURSO</button>
 </div>
   </form>
   <hr>
