--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
 <mat-toolbar>
   <span>CURSOS ONLINE</span>
@@ -17,4 +17,4 @@
 </mat-toolbar>
 <mat-toolbar>
   <span>BECAS</span>
-</mat-toolbar>
+</mat-toolbar> -->
