--- a/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.css
+++ b/src/app/cursos/components/form-nuevo-curso/form-nuevo-curso.component.css
@@ -60,4 +60,10 @@ border-left: 1px solid grey;}
 
 .selec{border: 1px solid grey !important;}
 
-
+.container-form button{ color: #ffff;
+border: 1px solid orange;
+padding: 10px;
+background-color: orange;
+font-family:  'Assistant', sans-serif;
+font-size: 1.3em;
+}
