--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -1,42 +1,42 @@
-.grid-container {display: grid;
+.grid-container {
+  display: grid;
   grid-template-areas:
-                       "slider slider slider slider"
-                       "menu becas becas becas"
-                       "noticias noticias noticias noticias"
-                       "form form form form"
-                       "alumno alumno alumno alumno"
-                       "curso curso curso curso"
-                       "footer footer footer footer";}
+    "slider slider slider slider"
+    "becas becas becas becas"
+    "alumno alumno alumno alumno"
+    "curso curso curso curso"
+    "footer footer footer footer";
+}
 
 
-.grid-becas{grid-area: becas;}
+.grid-becas {
+  grid-area: becas;
+}
 
- .grid-menu{grid-area: menu;
-   font-family:  'Assistant', sans-serif;}
+.grid-slider {
+  grid-area: slider;
+}
 
- .grid-slider{grid-area: slider;}
-
- .grid-alumno {grid-area: alumno;}
-
- .grid-form {grid-area: form;
-   font-family:  'Assistant', sans-serif;}
-
-
- .grid-noticias{ grid-area: noticias;
- }
-
- .grid-footer
- {grid-area: footer;}
-
- .grid-boton{grid-area: boton;
- width: 10%;
- margin: auto;}
-
- .mat-mdc-raised-button
-  {background-color: orange !important}
+.grid-alumno {
+  grid-area: alumno;
+}
 
 
-  .grid-form-curso{grid-area: form-curso;}
+.grid-footer {
+  grid-area: footer;
+}
+
+.grid-boton {
+  grid-area: boton;
+  width: 10%;
+  margin: auto;
+}
+
+.mat-mdc-raised-button {
+  background-color: orange !important
+}
 
 
-
+.grid-form-curso {
+  grid-area: form-curso;
+}
