--- a/src/app/components/section-noticias/section-noticias.component.css
+++ b/src/app/components/section-noticias/section-noticias.component.css
@@ -1,37 +1,44 @@
+.container-general {
+  width: 80%;
+  margin: 30px auto;
+  border-bottom: 2px solid orange;
+  padding: 40px;
+}
 
+.cont-inf {
+  align-items: center;
+  text-align: justify;
+}
 
-.container-de-container {border: 1px solid rgba(0, 0, 0, 0.2);
-width: 80%;
-margin: 30px auto;
-padding: 20px;
-color: #002653;
-font-family:  'Assistant', sans-serif;
-font-weight: 600;}
+.container-general h2 {
+  color: #002653;
+  margin-top: 30px;
+  font-size: 2em;
+  padding-left: 20px;
+  border-left: 2px solid #002653;
+}
 
-.container-de-container h2 {color: orange;
-font-size: 1.8em;}
+.cont-img {
+  width: 60%;
+  margin: 50px auto;
+}
 
-.contenedor-escrito{
+.cont-img img {
   width: 100%;
-  padding: 10px;
-}
-.contenedor-img{border-right: 1px solid rgba(0, 0, 0, 0.2);
-width: 100%;
+
 }
 
-.contenedor-img h3{font-weight: 500;
-font-size: 2.2em;
-margin-top: 30px;}
-.contenedor-img h4{font-weight: 500;
-font-size: 1.7em;
-color: orange;}
-.contenedor-img h5 {
-  font-weight: 500;
-  font-size: 1.2em;
+.cont-titulo {
+  width: 80%;
+  margin-top: 50px;
 }
 
-.card
- {border-radius: 0;
-border: 0;}
- .card-header{background-color: transparent;
-border: 0;}
+.titulo {
+  color: orange;
+  font-size: 3em;
+  font-family: 'Assistant', sans-serif;
+  margin-left: 130px;
+  padding: 30px;
+  border-left: 2px solid orange;
+  border-bottom: 2px solid orange;
+}
