--- a/src/app/components/section-slider/section-slider.component.html
+++ b/src/app/components/section-slider/section-slider.component.html
@@ -1,5 +1,11 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
+    <div class="carousel-item">
+      <img src="../../../assets/images/Slider-principal-R1.png" class="d-block w-100" alt="slide">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/images/Becas-Radiologia-Solidaria-1920-×-400-px-1.png" class="d-block w-100" alt="slide">
+    </div>
     <div class="carousel-item active">
       <img src="../../../assets/images/Slider-principal-SNC2023.png" class="d-block w-100" alt="slide">
     </div>
@@ -8,6 +14,9 @@
     </div>
     <div class="carousel-item">
       <img src="../../../assets/images/Slider-principal-36-Congreso.png" class="d-block w-100" alt="slide">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/images/Banner-web-OKOKOK-.png" class="d-block w-100" alt="slide">
     </div>
   </div>
 </div>
