--- a/src/app/inicio-sesion/components/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/components/inicio-sesion.component.html
@@ -14,7 +14,7 @@
       <div class="col-md12">
         <mat-form-field appearance="outline" class="apariencia">
           <mat-label>Contraseña</mat-label>
-          <input matInput type="text" title="password" formControlName="contrasena">
+          <input matInput type="password" title="password" formControlName="contrasena">
         </mat-form-field>
       </div>
       <div class="admin">
