--- a/src/app/cursos/components/cards/cards.component.css
+++ b/src/app/cursos/components/cards/cards.component.css
@@ -32,3 +32,23 @@ font-size: 1.1em;}
 
   .spinner{width: 100px;
   margin: 300px auto;}
+
+  .container {width: 80%;
+  margin: 50px auto;}
+
+  .container h1 {text-align: center;
+  color: orange;
+font-size: 4em;
+margin-bottom: 20px;
+font-weight: 500;
+font-family: 'Assistant', sans-serif;}
+
+.container h2 {color: #002653;
+text-align: center;
+font-size: 1.5em;
+font-family: 'Assistant', sans-serif;}
+
+.container p {color: #002653;
+text-align: justify;
+font-size: 1.2em;
+font-family: 'Assistant', sans-serif;}
