--- a/src/app/cursos/components/section-cursos/section-cursos.component.html
+++ b/src/app/cursos/components/section-cursos/section-cursos.component.html
@@ -1,3 +1,6 @@
+<div class="spinner" *ngIf="loadind$ | async">
+  <mat-spinner color="accent"></mat-spinner>
+</div>
 <div class="tabla">
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="titulo">
