agregue un ultimo cambio

--- a/src/app/components/section-alumnos/section-alumnos.component.html
+++ b/src/app/components/section-alumnos/section-alumnos.component.html
@@ -10,8 +10,8 @@
         <li> {{Alumno.nombre +" "+ Alumno.apellido}}</li>
       </ul>
     </div>
-
   </div>
+
   <p>
     <button class="btn btn-primary mx-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
       BECAS
@@ -22,8 +22,21 @@
       <ul *ngFor=" let Alumno of listaAlumnos">
         <li *ngIf="Alumno.socio === true"> {{Alumno.nombre +" "+ Alumno.apellido}} <span>SOCIO</span></li>
       </ul>
+    </div>
+  </div>
+
+  <p>
+    <button class="btn btn-primary mx-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample1">
+      SOCIOS
+    </button>
+  </p>
+  <div class="collapse" id="collapseExample3">
+    <div class="card card-body fs-1" id="placeholder-alumno">
+      <ul *ngFor=" let Alumno of listaAlumnos">
+        <li *ngIf="Alumno.socio === true"> {{Alumno.nombre +" "+ Alumno.apellido}}
+      </ul>
       <ul *ngFor=" let Socio of listaSocios">
-        <li> {{Socio.nombre +" "+ Socio.apellido}} <span>SOCIO</span></li>
+        <li> {{Socio.nombre +" "+ Socio.apellido}}</li>
       </ul>
     </div>
   </div>
